# dockerize-gtest

./: CMakeLists.txt  Dockerfile  docker-compose.yml  main.cpp
